# kodaskanna

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  README.md
icons/: 48-apps-kodaskanna.svg.license  CMakeLists.txt
po/ar/: kodaskanna.po
po/ca/: kodaskanna.po
po/ca@valencia/: kodaskanna.po
po/cs/: kodaskanna.po
po/de/: kodaskanna.po
po/en_GB/: kodaskanna.po
po/eo/: kodaskanna.po
po/es/: kodaskanna.po
po/eu/: kodaskanna.po
po/fi/: kodaskanna.po
po/fr/: kodaskanna.po
po/ga/: kodaskanna.po
po/gl/: kodaskanna.po
po/he/: kodaskanna.po
po/hi/: kodaskanna.po
po/ia/: kodaskanna.po
po/is/: kodaskanna.po
po/it/: kodaskanna.po
po/ja/: kodaskanna.po
po/ka/: kodaskanna.po
po/ko/: kodaskanna.po
po/lt/: kodaskanna.po
po/nl/: kodaskanna.po
po/nn/: kodaskanna.po
po/pl/: kodaskanna.po
po/pt/: kodaskanna.po
po/pt_BR/: kodaskanna.po
po/sa/: kodaskanna.po
po/sk/: kodaskanna.po
po/sl/: kodaskanna.po
po/sv/: kodaskanna.po
po/tr/: kodaskanna.po
po/uk/: kodaskanna.po
po/zh_CN/: kodaskanna.po
po/zh_TW/: kodaskanna.po
src/: CMakeLists.txt
src/app/: CMakeLists.txt  config.hpp.in  main.cpp  org.kde.kodaskanna.appdata.xml  org.kde.kodaskanna.desktop  window.cpp  window.hpp  window.ui
src/clipboardexport/: CMakeLists.txt  plugin.cpp  plugin.hpp  tool.cpp  tool.hpp
src/core/: CMakeLists.txt  scanimagerunner.cpp  scanimagerunner.hpp  scanresult.cpp  scanresult.hpp  scanresult_p.hpp
src/fileexport/: CMakeLists.txt  plugin.cpp  plugin.hpp  tool.cpp  tool.hpp
src/helpmenu/: CMakeLists.txt  plugin.cpp  plugin.hpp  tool.cpp  tool.hpp
src/imagesource/: CMakeLists.txt  imagereadresult.cpp  imagereadresult.hpp  imagereadresult_p.hpp  imageselecttool.cpp  imageselecttool.hpp  imageselectwidget.cpp  imageselectwidget.hpp  imageselectwidget.ui  imageview.cpp  imageview.hpp  loadimagejob.cpp  loadimagejob.hpp  plugin.cpp  plugin.hpp  readimagefilerunner.cpp  readimagefilerunner.hpp  tool.cpp  tool.hpp  widget.cpp  widget.hpp  widget.ui
src/konqpopupmenu/: CMakeLists.txt  kodaskanna_scan_image.desktop
src/plaintextdisplay/: CMakeLists.txt  plugin.cpp  plugin.hpp  tool.cpp  tool.hpp  widget.cpp  widget.hpp  widget.ui
src/purposeplugin/: CMakeLists.txt  launchjob.cpp  launchjob.hpp  plugin.cpp  plugin.json
src/sourcenavigation/: CMakeLists.txt  plugin.cpp  plugin.hpp  tool.cpp  tool.hpp
src/widgets/: CMakeLists.txt  abstractdisplaytool.cpp  abstractdisplaytool.hpp  abstractexporttool.cpp  abstractexporttool.hpp  abstractmenutool.cpp  abstractmenutool.hpp  abstractnavigatesourcetool.cpp  abstractnavigatesourcetool.hpp  abstractsourcetool.cpp  abstractsourcetool.hpp
